--- a/flowedit/index.html
+++ b/flowedit/index.html
@@ -690,8 +690,8 @@
 		<!-- References -->
 		<h3>References</h3>
 		<p>
-			[1] Xiaofeng Yang, Cheng Chen, Xulei Yang, Fayao Liu and Guosheng Lin. "Text-to-Image Rectified Flow as Plug-and-Play Priors." ICLR 2025<br>
-			[2] Litu Rout, Yujia Chen, Nataniel Ruiz, Constantine Caramanis, Sanjay Shakkottai and Wen-Sheng Chu. "Semantic Image Inversion and Editing using Stochastic Rectified Differential Equations." ICLR 2025<br>
+			[1] Xiaofeng Yang, Cheng Chen, Xulei Yang, Fayao Liu and Guosheng Lin. "Text-to-Image Rectified Flow as Plug-and-Play Priors." ICLR 2025.<br>
+			[2] Litu Rout, Yujia Chen, Nataniel Ruiz, Constantine Caramanis, Sanjay Shakkottai and Wen-Sheng Chu. "Semantic Image Inversion and Editing using Stochastic Rectified Differential Equations." ICLR 2025.<br>
 			[2] Jiangshan Wang, Pu Junfu, Qi Zhongang, Guo Jiayi, Ma Yue, Huang Nisha, Chen Yuxin, Li Xiu and Shan Ying. "Taming Rectified Flow for Inversion and Editing." ICML 2025.<br>
 		</p>
 		<hr>
