--- a/flowedit/index.html
+++ b/flowedit/index.html
@@ -87,6 +87,9 @@
                             ComfyUI
                         </a>
                     </div>
+					<div class="col-md-auto">
+						<span><a class="btn btn-outline-primary" role="button" href="https://github.com/fallenshock/FlowEdit/tree/main/Data" style="font-size: 24px;" target="_blank"><i class="fa fa-database"></i> Data</a></span>
+					</div>
 				</div>
 			</div>
 		</center>
@@ -666,7 +669,7 @@
 
 		<div class="container">
 			<p class="text-left">
-				Our official code can be found in the official <a href="https://github.com/fallenshock/FlowEdit" target="_blank" rel="noopener noreferrer">github repository</a>. 
+				Our official code and dataset can be found in the official <a href="https://github.com/fallenshock/FlowEdit" target="_blank" rel="noopener noreferrer">github repository</a>. 
 			</p>	
 		</div>
 
@@ -675,10 +678,13 @@
 		<div class="container" id="comfy">
 			<p class="text-left">
 				<img src="resources/comfyui-color.svg" alt="Logo" style="width: 27px; height: 27px; margin-right: 0px;">
-				ComfyUI implementation for <a href="https://github.com/logtd/ComfyUI-Fluxtapoz" target="_blank" rel="noopener noreferrer">FLUX</a>, 
-				<a href="https://github.com/logtd/ComfyUI-LTXTricks" target="_blank" rel="noopener noreferrer">LTX Video</a> and 
+				<br>
+				ComfyUI implementation for <a href="https://github.com/logtd/ComfyUI-Fluxtapoz" target="_blank" rel="noopener noreferrer">FLUX</a> 
+				 and 
 				<a href="https://github.com/logtd/ComfyUI-HunyuanLoom" target="_blank" rel="noopener noreferrer">HunyuanLoom</a>,
 				 implemented by <a href="https://x.com/logtdx/status/1869095838016012462?s=48&t=6Yj6BZKooDOmH_JWRWjtHg" target="_blank" rel="noopener noreferrer">logtd</a>.
+				 <br>
+				 LTX-Video ComfyUI implementation can be found in LTX-Video <a href="https://github.com/Lightricks/ComfyUI-LTXVideo/tree/master?tab=readme-ov-file#flow-edit" target="_blank" rel="noopener noreferrer">official repository</a>.
 			</p>
 		</div>
 
