--- a/flowedit/index.html
+++ b/flowedit/index.html
@@ -47,7 +47,7 @@
 		<!-- top - author names, affiliation and links -->
 		<center>
 			<h1>FlowEdit: Inversion-Free Text-Based Editing<br>Using Pre-Trained Flow Models</h1>
-			<h2>ICCV 2025</h2>
+			<h2>ICCV 2025 Oral</h2>
 			<div class="container">
 				<div class="row justify-content-md-center">
 
