--- a/index.html
+++ b/index.html
@@ -126,6 +126,9 @@
                                 model agnostic. Our method constructs an ODE that directly maps between the source and target distributions (corresponding to the source 
                                 and target text prompts) and achieves a lower transport cost than the inversion approach. This leads to state-of-the-art results, as we 
                                 illustrate with Stable Diffusion 3 and FLUX.
+                            </br>
+                                <span style="color: rgb(255, 123, 0);">Accepted as an <i>oral presentation</i>.</span>
+
                     </p>
                 </div>
                 <div class="row">
