--- a/index.html
+++ b/index.html
@@ -102,6 +102,40 @@
         <div class="container" style="max-width: 1000px;">
 
 
+            <div class="card mb-3 shadow anchor" id="Optical SR">
+                <div class="card-body">
+                    <div class="row open-sans-300">
+                        <div class="col"><h5 class="card-title">Can the Success of Digital Super-Resolution Networks Be Transferred to Passive All-Optical Systems?</h5></div>
+                        <div class="col-auto">
+                            <a href=""><i class="fa fa-external-link fa-lg" aria-hidden="true"></i></a>
+                            &nbsp;
+                            <a href="https://github.com/matankleiner/All-Optical-SR"><i class="fa fa-github fa-lg" aria-hidden="true"></i></a>
+                            &nbsp;
+                            <span class="badge bg-primary">Nanophotonics 2025</span>
+                        </div>
+                    </div>
+                        <h6 class="card-subtitle mb-2 text-muted">
+                        <b>Matan Kleiner</b>,
+                        <a href="https://www.linkedin.com/in/lior-michaeli-62a24862/" target="_blank" rel="noopener noreferrer" class="text-muted">Lior Michaeli</a>,
+                        <a href="https://tomer.net.technion.ac.il/" target="_blank" class="text-muted">Tomer Michaeli</a></h6>
+                                      
+                    <p class="card-text">
+                        A task that could greatly benefit from an all-optical implementation is spatial super-resolution. 
+                        This would allow overcoming the fundamental resolution limitation of conventional optical systems, dictated by their finite numerical aperture. 
+                        In this work we examine whether the success of digital super-resolution networks can be replicated with all-optical neural networks, considering networks 
+                        with phase-only nonlinearities. 
+                        We find that while promising, super-resolution networks face two key physical challenges: (i) a tradeoff between reconstruction fidelity and 
+                        energy preservation along the optical path, and (ii) a limited dynamic range of input intensities that can be effectively processed. 
+                        These findings offer a first step toward understanding and addressing the design constraints of passive, all-optical super-resolution systems, as well as passive all-optical nonlinear network. 
+                        </br>
+                        <span style="color: rgb(255, 123, 0);">Presented as an <i>oral presentation</i> at CLEO 2025.</span>
+                    </p>
+                </div>
+                <div class="row">
+                    <img src="assets/OpticalSR.png" class="card-img-bottom" style="padding-left: 7rem; padding-right: 7rem; padding-bottom: 1rem;" alt="">
+                </div>
+            </div>
+
             <div class="card mb-3 shadow" id="FlowEdit">
                 <div class="card-body">
                     <div class="row open-sans-300">
