--- a/index.html
+++ b/index.html
@@ -107,9 +107,9 @@
                     <div class="row open-sans-300">
                         <div class="col"><h5 class="card-title">Can the Success of Digital Super-Resolution Networks Be Transferred to Passive All-Optical Systems?</h5></div>
                         <div class="col-auto">
-                            <a href=""><i class="fa fa-external-link fa-lg" aria-hidden="true"></i></a>
+                            <a href="" target="_blank" rel="noopener noreferrer"><i class="fa fa-external-link fa-lg" aria-hidden="true"></i></a>
                             &nbsp;
-                            <a href="https://github.com/matankleiner/All-Optical-SR"><i class="fa fa-github fa-lg" aria-hidden="true"></i></a>
+                            <a href="https://github.com/matankleiner/All-Optical-SR" target="_blank" rel="noopener noreferrer"><i class="fa fa-github fa-lg" aria-hidden="true"></i></a>
                             &nbsp;
                             <span class="badge bg-primary">Nanophotonics 2025</span>
                         </div>
@@ -141,11 +141,11 @@
                     <div class="row open-sans-300">
                         <div class="col"><h5 class="card-title">FlowEdit: Inversion-Free Text-Based Editing Using Pre-Trained Flow Models</h5></div>
                         <div class="col-auto">
-                            <a href="https://matankleiner.github.io/flowedit/"><i class="fa fa-external-link fa-lg" aria-hidden="true"></i></a>
+                            <a href="https://matankleiner.github.io/flowedit/" target="_blank" rel="noopener noreferrer"><i class="fa fa-external-link fa-lg" aria-hidden="true"></i></a>
                             &nbsp;
-                            <a href="https://github.com/fallenshock/FlowEdit"><i class="fa fa-github fa-lg" aria-hidden="true"></i></a>
+                            <a href="https://github.com/fallenshock/FlowEdit" target="_blank" rel="noopener noreferrer"><i class="fa fa-github fa-lg" aria-hidden="true"></i></a>
 			                 &nbsp;
-                             <a href="https://huggingface.co/spaces/fallenshock/FlowEdit" style="text-decoration: none;">🤗</a>
+                             <a href="https://huggingface.co/spaces/fallenshock/FlowEdit" target="_blank" rel="noopener noreferrer" style="text-decoration: none;">🤗</a>
 			                 &nbsp;
                             <span class="badge bg-primary">ICCV 2025</span>
                         </div>
@@ -176,9 +176,9 @@
                     <div class="row open-sans-300">
                         <div class="col"><h5 class="card-title">Coherence Awareness in Diffractive Neural Networks</h5></div>
                         <div class="col-auto">
-                            <a href="https://onlinelibrary.wiley.com/doi/10.1002/lpor.202401299"><i class="fa fa-external-link fa-lg" aria-hidden="true"></i></a>
+                            <a href="https://onlinelibrary.wiley.com/doi/10.1002/lpor.202401299" target="_blank" rel="noopener noreferrer"><i class="fa fa-external-link fa-lg" aria-hidden="true"></i></a>
                             &nbsp;
-                            <a href="https://github.com/matankleiner/Coherence-Awareness-in-Diffractive-Neural-Networks"><i class="fa fa-github fa-lg" aria-hidden="true"></i></a>
+                            <a href="https://github.com/matankleiner/Coherence-Awareness-in-Diffractive-Neural-Networks" target="_blank" rel="noopener noreferrer"><i class="fa fa-github fa-lg" aria-hidden="true"></i></a>
                             &nbsp;
                             <span class="badge bg-primary">Laser Photonics Rev. 2025</span>
                         </div>
@@ -211,9 +211,9 @@
                     <div class="row open-sans-300">
                         <div class="col"><h5 class="card-title">Slicedit: Zero-Shot Video Editing With Text-to-Image Diffusion Models Using Spatio-Temporal Slices</h5></div>
                         <div class="col-auto">
-                            <a href="https://matankleiner.github.io/slicedit/"><i class="fa fa-external-link fa-lg" aria-hidden="true"></i></a>
+                            <a href="https://matankleiner.github.io/slicedit/" target="_blank" rel="noopener noreferrer"><i class="fa fa-external-link fa-lg" aria-hidden="true"></i></a>
                             &nbsp;
-                            <a href="https://github.com/fallenshock/Slicedit"><i class="fa fa-github fa-lg" aria-hidden="true"></i></a>
+                            <a href="https://github.com/fallenshock/Slicedit" target="_blank" rel="noopener noreferrer"><i class="fa fa-github fa-lg" aria-hidden="true"></i></a>
                             &nbsp;
                             <span class="badge bg-primary">ICML 2024</span>
                         </div>
@@ -246,9 +246,9 @@
                     <div class="row open-sans-300">
                         <div class="col"><h5 class="card-title">SinDDM: A Single Image Denoising Diffusion Model</h5></div>
                         <div class="col-auto">
-                            <a href="https://matankleiner.github.io/sinddm/"><i class="fa fa-external-link fa-lg" aria-hidden="true"></i></a>
+                            <a href="https://matankleiner.github.io/sinddm/" target="_blank" rel="noopener noreferrer"><i class="fa fa-external-link fa-lg" aria-hidden="true"></i></a>
                             &nbsp;
-                            <a href="https://github.com/fallenshock/SinDDM"><i class="fa fa-github fa-lg" aria-hidden="true"></i></a>
+                            <a href="https://github.com/fallenshock/SinDDM" target="_blank" rel="noopener noreferrer"><i class="fa fa-github fa-lg" aria-hidden="true"></i></a>
                             &nbsp;
                             <span class="badge bg-primary">ICML 2023</span>
                         </div>
