--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                     <div class="row open-sans-300">
                         <div class="col"><h5 class="card-title">Can the Success of Digital Super-Resolution Networks Be Transferred to Passive All-Optical Systems?</h5></div>
                         <div class="col-auto">
-                            <a href="" target="_blank" rel="noopener noreferrer"><i class="fa fa-external-link fa-lg" aria-hidden="true"></i></a>
+                            <a href="https://www.degruyterbrill.com/document/doi/10.1515/nanoph-2025-0294/html" target="_blank" rel="noopener noreferrer"><i class="fa fa-external-link fa-lg" aria-hidden="true"></i></a>
                             &nbsp;
                             <a href="https://github.com/matankleiner/All-Optical-SR" target="_blank" rel="noopener noreferrer"><i class="fa fa-github fa-lg" aria-hidden="true"></i></a>
                             &nbsp;
