--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
                                 and target text prompts) and achieves a lower transport cost than the inversion approach. This leads to state-of-the-art results, as we 
                                 illustrate with Stable Diffusion 3 and FLUX.
                             </br>
-                                <span style="color: rgb(255, 123, 0);">Accepted as an <i>oral presentation</i>.</span>
+                                <span style="color: rgb(255, 123, 0);">ICCV 2025 Best Student Paper.</span>
 
                     </p>
                 </div>
