--- a/flowedit/index.html
+++ b/flowedit/index.html
@@ -657,11 +657,12 @@
 		<p class="section" id="bibtex"><b>Bibtex</b></p>
 		<table border="0">
 		<tbody>
-			<pre class="command-copy"><div class="container"><div class="row"><div class="col" id="citation">@article{kulikov2024flowedit,
-	title = {FlowEdit: Inversion-Free Text-Based Editing Using Pre-Trained Flow Models},
-	author = {Kulikov, Vladimir and Kleiner, Matan and Huberman-Spiegelglas, Inbar and Michaeli, Tomer},
-	journal = {arXiv preprint arXiv:2412.08629},
-	year = {2024}
+			<pre class="command-copy"><div class="container"><div class="row"><div class="col" id="citation">@inproceedings{kulikov2025flowedit,
+	title={Flowedit: Inversion-free text-based editing using pre-trained flow models},
+	author={Kulikov, Vladimir and Kleiner, Matan and Huberman-Spiegelglas, Inbar and Michaeli, Tomer},
+	booktitle={Proceedings of the IEEE/CVF International Conference on Computer Vision},
+	pages={19721--19730},
+	year={2025}
 	}	</div><div class="col text-end"><button type="button" class="btn btn-light" onclick="copyBib()" onmouseover="console.log('hover');"><i class="fa-regular fa-copy"></i></button></div></div></div></pre>
 		</tbody>
 		</table>
