--- a/flowedit/index.html
+++ b/flowedit/index.html
@@ -74,6 +74,9 @@
 						<span><a class="btn btn-outline-primary" href='https://arxiv.org/abs/2412.08629' role="button" style="font-size: 24px;" target="_blank"><i class="ai ai-arxiv"></i> Arxiv</a></span>
 					</div>
 					<div class="col-md-auto">
+						<span><a class="btn btn-outline-primary" href='https://openaccess.thecvf.com/content/ICCV2025/html/Kulikov_FlowEdit_Inversion-Free_Text-Based_Editing_Using_Pre-Trained_Flow_Models_ICCV_2025_paper.html' role="button" style="font-size: 24px;" target="_blank"><i class="fas fa-file-pdf"></i> Proceedings</a></span>
+					</div>
+					<div class="col-md-auto">
 						<span><a class="btn btn-outline-primary" role="button" href="https://github.com/fallenshock/FlowEdit" style="font-size: 24px;" target="_blank"><i class="fab fa-github"></i> Code</a></span>
 					</div>
 					<div class="col-md-auto">
@@ -105,6 +108,7 @@
 					</div>
 				</div>
 			</div>
+			
 		
 		<h1 style="margin-top: 5px;">Abstract</h1>
 		</center>
@@ -680,12 +684,12 @@
 			<p class="text-left">
 				<img src="resources/comfyui-color.svg" alt="Logo" style="width: 27px; height: 27px; margin-right: 0px;">
 				<br>
-				ComfyUI implementation for <a href="https://github.com/logtd/ComfyUI-Fluxtapoz" target="_blank" rel="noopener noreferrer">FLUX</a> 
+				ComfyUI implementation for <a href="https://github.com/logtd/ComfyUI-Fluxtapoz?tab=readme-ov-file#flow-edit" target="_blank" rel="noopener noreferrer">FLUX</a> 
 				 and 
-				<a href="https://github.com/logtd/ComfyUI-HunyuanLoom" target="_blank" rel="noopener noreferrer">HunyuanLoom</a>,
+				<a href="https://github.com/logtd/ComfyUI-HunyuanLoom?tab=readme-ov-file#flowedit" target="_blank" rel="noopener noreferrer">HunyuanLoom</a>,
 				 implemented by <a href="https://x.com/logtdx/status/1869095838016012462?s=48&t=6Yj6BZKooDOmH_JWRWjtHg" target="_blank" rel="noopener noreferrer">logtd</a>.
 				 <br>
-				 LTX-Video ComfyUI implementation can be found in LTX-Video <a href="https://github.com/Lightricks/ComfyUI-LTXVideo/tree/master?tab=readme-ov-file#flow-edit" target="_blank" rel="noopener noreferrer">official repository</a>.
+				 LTX-Video ComfyUI implementation can be found in LTX-Video <a href="https://github.com/Lightricks/LTX-Video?tab=readme-ov-file#comfyui-ltxtricks-%EF%B8%8F" target="_blank" rel="noopener noreferrer">official repository</a>.
 			</p>
 		</div>
 
