--- a/flowedit/index.html
+++ b/flowedit/index.html
@@ -55,7 +55,7 @@
 						<span style="font-size:24px"><a href="https://www.linkedin.com/in/vladimir-kulikov/" target="_blank" rel="noopener noreferrer">Vladimir Kulikov</a></span>
 					</div>
 					<div class="col-md-auto">
-						<span style="font-size:24px"><a href="https://www.linkedin.com/in/matan-kleiner/" target="_blank" rel="noopener noreferrer">Matan Kleiner</a></span>
+						<span style="font-size:24px"><a href="https://matankleiner.github.io/" target="_blank" rel="noopener noreferrer">Matan Kleiner</a></span>
 					</div>
 					<div class="col-md-auto">
 						<span style="font-size:24px"><a href="https://inbarhub.github.io/www/" target="_blank" rel="noopener noreferrer">Inbar Huberman-Spiegelglas</a></span>
